--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "immutable": "^3.8.1",
     "react": "^15.1.0",
     "react-native": "0.27.2",
     "react-redux": "^4.4.5",
@@ -17,8 +18,12 @@
   "devDependencies": {
     "babel-core": "^6.9.1",
     "babel-eslint": "^6.0.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.9.1",
+    "babel-preset-react-native": "^1.9.0",
     "eslint": "^2.11.1",
-    "eslint-plugin-react": "^5.1.1"
+    "eslint-plugin-react": "^5.1.1",
+    "immutable-devtools": "0.0.7",
+    "remote-redux-devtools": "^0.3.3"
   }
 }
